--- a/includes/style.css
+++ b/includes/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-image: url(/images/bg-image.jpg);
+    background-image: url(../images/bg-image.jpg);
     border-bottom: 4px dashed bisque;
 }
 
